{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 22,
  "lineage": "add134c9-c3fc-600d-ffd8-95db8ecaf74d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "TF-Project-eip-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f88ebb0448f93b0",
            "domain": "vpc",
            "id": "eipalloc-02f88ebb0448f93b0",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-127-174-38.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.174.38",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "TF-Project-eip-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05c4bdfc38ceeb2bb",
            "domain": "vpc",
            "id": "eipalloc-05c4bdfc38ceeb2bb",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-65-0-210-206.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.210.206",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "TF-Project-instance-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0384edf28491e2ae6",
            "arn": "arn:aws:ec2:ap-south-1:954923534051:instance/i-0ac6ee95cc2291b05",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ac6ee95cc2291b05",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Ansible-Demo-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-052dc6c3a19f988ad",
            "private_dns": "ip-10-10-1-117.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.117",
            "public_ip": "65.1.86.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02cd288c9fa33dc9c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-057bed9694800ee9c",
            "tags": {
              "Name": "TF-Project-instance-1"
            },
            "tags_all": {
              "Name": "TF-Project-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0310ce4352c41a09e",
              "sg-0bffe4fd04e667d49"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_22",
            "aws_security_group.allow_80",
            "aws_subnet.TF-Project-Public-Subnet-1",
            "aws_vpc.TF-Project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "TF-Project-instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0384edf28491e2ae6",
            "arn": "arn:aws:ec2:ap-south-1:954923534051:instance/i-01412fd9c8e286317",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01412fd9c8e286317",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Ansible-Demo-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05f5457005dd775ac",
            "private_dns": "ip-10-10-2-118.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.2.118",
            "public_ip": "43.204.100.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0eb1b908f8a85cb5d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f7ed28c9ac94865",
            "tags": {
              "Name": "TF-Project-instance-2"
            },
            "tags_all": {
              "Name": "TF-Project-instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0310ce4352c41a09e",
              "sg-0bffe4fd04e667d49"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_22",
            "aws_security_group.allow_80",
            "aws_subnet.TF-Project-Public-Subnet-2",
            "aws_vpc.TF-Project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "TF-Project-instance-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0384edf28491e2ae6",
            "arn": "arn:aws:ec2:ap-south-1:954923534051:instance/i-00c34b232cf204272",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00c34b232cf204272",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Ansible-Demo-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0515b28b2e5423cf7",
            "private_dns": "ip-10-10-3-143.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.3.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0de88f7ef3fd59c30",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-034fb6fa6317a57e8",
            "tags": {
              "Name": "TF-Project-instance-3"
            },
            "tags_all": {
              "Name": "TF-Project-instance-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0310ce4352c41a09e",
              "sg-0bffe4fd04e667d49"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_22",
            "aws_security_group.allow_80",
            "aws_subnet.TF-Project-Private-Subnet-3",
            "aws_vpc.TF-Project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "TF-Project-instance-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0384edf28491e2ae6",
            "arn": "arn:aws:ec2:ap-south-1:954923534051:instance/i-018679a5e3a155153",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-018679a5e3a155153",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Ansible-Demo-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05ef6e50bbaaa2af9",
            "private_dns": "ip-10-10-4-124.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.4.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f3ea3657742b6f0f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d3cb218df14d020f",
            "tags": {
              "Name": "TF-Project-instance-4"
            },
            "tags_all": {
              "Name": "TF-Project-instance-4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0310ce4352c41a09e",
              "sg-0bffe4fd04e667d49"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_22",
            "aws_security_group.allow_80",
            "aws_subnet.TF-Project-Private-Subnet-4",
            "aws_vpc.TF-Project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "TF-Project-IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954923534051:internet-gateway/igw-0c323c723ebb1f994",
            "id": "igw-0c323c723ebb1f994",
            "owner_id": "954923534051",
            "tags": {
              "Name": "TF-Project-IG"
            },
            "tags_all": {
              "Name": "TF-Project-IG"
            },
            "vpc_id": "vpc-07c343cf82c9cbb97"
          },
          "dependencies": [
            "aws_vpc.TF-Project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "TF-Project-NAT-GW-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f88ebb0448f93b0",
            "connectivity_type": "public",
            "id": "nat-06b76dc5121d01e6f",
            "network_interface_id": "eni-05b008528bed1351b",
            "private_ip": "10.10.1.207",
            "public_ip": "13.127.174.38",
            "subnet_id": "subnet-057bed9694800ee9c",
            "tags": {
              "Name": "TF-Project-NAT-GW-1"
            },
            "tags_all": {
              "Name": "TF-Project-NAT-GW-1"
            }
          },
          "dependencies": [
            "aws_eip.TF-Project-eip-1",
            "aws_subnet.TF-Project-Public-Subnet-1",
            "aws_vpc.TF-Project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "TF-Project-NAT-GW-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05c4bdfc38ceeb2bb",
            "connectivity_type": "public",
            "id": "nat-0730d70f1809089ae",
            "network_interface_id": "eni-05245f27b4bf6c68b",
            "private_ip": "10.10.2.197",
            "public_ip": "65.0.210.206",
            "subnet_id": "subnet-07f7ed28c9ac94865",
            "tags": {
              "Name": "TF-Project-NAT-GW-2"
            },
            "tags_all": {
              "Name": "TF-Project-NAT-GW-2"
            }
          },
          "dependencies": [
            "aws_eip.TF-Project-eip-2",
            "aws_subnet.TF-Project-Public-Subnet-2",
            "aws_vpc.TF-Project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "TF-Project-NAT-GW-RT-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954923534051:route-table/rtb-08a18552444ba5022",
            "id": "rtb-08a18552444ba5022",
            "owner_id": "954923534051",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-06b76dc5121d01e6f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TF-Project-NAT-GW-RT-1"
            },
            "tags_all": {
              "Name": "TF-Project-NAT-GW-RT-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c343cf82c9cbb97"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.TF-Project-eip-1",
            "aws_nat_gateway.TF-Project-NAT-GW-1",
            "aws_subnet.TF-Project-Public-Subnet-1",
            "aws_vpc.TF-Project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "TF-Project-NAT-GW-RT-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954923534051:route-table/rtb-0b0586029019f3d07",
            "id": "rtb-0b0586029019f3d07",
            "owner_id": "954923534051",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0730d70f1809089ae",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TF-Project-NAT-GW-RT-2"
            },
            "tags_all": {
              "Name": "TF-Project-NAT-GW-RT-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c343cf82c9cbb97"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.TF-Project-eip-2",
            "aws_nat_gateway.TF-Project-NAT-GW-2",
            "aws_subnet.TF-Project-Public-Subnet-2",
            "aws_vpc.TF-Project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "TF-Project-public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954923534051:route-table/rtb-067b85a5e49ef3ff1",
            "id": "rtb-067b85a5e49ef3ff1",
            "owner_id": "954923534051",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c323c723ebb1f994",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TF-Project-public-RT"
            },
            "tags_all": {
              "Name": "TF-Project-public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c343cf82c9cbb97"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.TF-Project-IG",
            "aws_vpc.TF-Project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "TF-Project-Route_table_association-Subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c3a5c2b15a3899d",
            "route_table_id": "rtb-067b85a5e49ef3ff1",
            "subnet_id": "subnet-057bed9694800ee9c"
          },
          "dependencies": [
            "aws_internet_gateway.TF-Project-IG",
            "aws_route_table.TF-Project-public-RT",
            "aws_subnet.TF-Project-Public-Subnet-1",
            "aws_vpc.TF-Project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "TF-Project-Route_table_association-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0259e5c8fa872897d",
            "route_table_id": "rtb-067b85a5e49ef3ff1",
            "subnet_id": "subnet-07f7ed28c9ac94865"
          },
          "dependencies": [
            "aws_internet_gateway.TF-Project-IG",
            "aws_route_table.TF-Project-public-RT",
            "aws_subnet.TF-Project-Public-Subnet-2",
            "aws_vpc.TF-Project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954923534051:security-group/sg-0310ce4352c41a09e",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0310ce4352c41a09e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_port-22",
            "name_prefix": "",
            "owner_id": "954923534051",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c343cf82c9cbb97"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.TF-Project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954923534051:security-group/sg-0bffe4fd04e667d49",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0bffe4fd04e667d49",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_port-80",
            "name_prefix": "",
            "owner_id": "954923534051",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c343cf82c9cbb97"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.TF-Project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TF-Project-Private-Subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954923534051:subnet/subnet-034fb6fa6317a57e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034fb6fa6317a57e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954923534051",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TF-Project-Private-Subnet-3"
            },
            "tags_all": {
              "Name": "TF-Project-Private-Subnet-3"
            },
            "vpc_id": "vpc-07c343cf82c9cbb97"
          },
          "dependencies": [
            "aws_vpc.TF-Project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TF-Project-Private-Subnet-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954923534051:subnet/subnet-0d3cb218df14d020f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3cb218df14d020f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954923534051",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TF-Project-Private-Subnet-4"
            },
            "tags_all": {
              "Name": "TF-Project-Private-Subnet-4"
            },
            "vpc_id": "vpc-07c343cf82c9cbb97"
          },
          "dependencies": [
            "aws_vpc.TF-Project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TF-Project-Public-Subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954923534051:subnet/subnet-057bed9694800ee9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057bed9694800ee9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "954923534051",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TF-Project-Public-Subnet-1"
            },
            "tags_all": {
              "Name": "TF-Project-Public-Subnet-1"
            },
            "vpc_id": "vpc-07c343cf82c9cbb97"
          },
          "dependencies": [
            "aws_vpc.TF-Project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TF-Project-Public-Subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954923534051:subnet/subnet-07f7ed28c9ac94865",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f7ed28c9ac94865",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "954923534051",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TF-Project-Public-Subnet-2"
            },
            "tags_all": {
              "Name": "TF-Project-Public-Subnet-2"
            },
            "vpc_id": "vpc-07c343cf82c9cbb97"
          },
          "dependencies": [
            "aws_vpc.TF-Project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "TF-Project-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954923534051:vpc/vpc-07c343cf82c9cbb97",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-092bee0a1baa65449",
            "default_route_table_id": "rtb-00518fab86e804a44",
            "default_security_group_id": "sg-02358435729e2d38f",
            "dhcp_options_id": "dopt-053a0d21d4aa5ea35",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07c343cf82c9cbb97",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00518fab86e804a44",
            "owner_id": "954923534051",
            "tags": {
              "Name": "TF-Project-VPC"
            },
            "tags_all": {
              "Name": "TF-Project-VPC"
            }
          }
        }
      ]
    }
  ]
}